--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 
 <html>
 <head>
-<title>欢迎您来到上当空间</title>
+<title>欢迎您来到Orange的上当空间</title>
 <meta content="text/html; charset=gb2312" http-equiv=Content-Type />
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
-<meta name="description" content="上当空间、整人空间、整蛊空间" />
-<meta name="keywords" content="上当空间、整人空间、整蛊空间" />
+<meta name="description" content="Orange的上当空间、整人空间、整蛊空间" />
+<meta name="keywords" content="Orange的上当空间、整人空间、整蛊空间" />
 <style type="text/css">
 <!--
      *{margin:0;padding:0;}
@@ -24,7 +24,7 @@ function zoo(){
   alert('再多玩一会吧');
   alert('要不吃个饭再走！！！');
   alert('算了,还是送你回去吧');
-  window.open ('http://www.rs100.cn/fun/fun.html','newwindow','height=100%,width=100%,top=0,left=0,toolbar=no,menubar=no,scrollbars=no, resizable=no,location=no, status=no,fullscreen=yes');
+  window.open ('zsccodelnc.cn','newwindow','height=100%,width=100%,top=0,left=0,toolbar=no,menubar=no,scrollbars=no, resizable=no,location=no, status=no,fullscreen=yes');
 }
 function copy_clip(copy){
 if (window.clipboardData){
@@ -203,13 +203,14 @@ return false;
 <p><font size="10" color="red">个前来被骗的人</font></p>
 </br>
 <p><font size="10" color="red">快把这个网址分享给你的朋友！</font></p>
+<p><font size="10" color="red">zsccodelnc.cn/MFF</font></p>
 </table>
 <br />
 <table border="0" align="center" cellpadding="0" cellspacing="0" style="margin:0 auto;">
   <tr>
     <td height="10"><hr style="width:950px;" /></td>
 
-    站长：louvreliu 　<a href="mail:web@pingzuowen.com">web@pingzuowen.com</a>&nbsp;　QQ闲聊群:<br />     
+    站长：louvreliu     修改者站长：orange（张仕成） 　<a href="mail:orangezhsc@gmail.com">orangezhsc@gmail.com</a>&nbsp;　QQ闲聊群:702513781(快加进去快加进去快加进去快加进去快加进去快加进去快加进去快加进去快加进去快加进去)<br />     
     CopyRight 2022—202我不到啊 <a href="https://zsccodelnc.cn">Orange的博客</a></td>
   </tr>
 </table>
