--- a/index.html
+++ b/index.html
@@ -203,7 +203,9 @@ return false;
 <p><font size="10" color="red">个前来被骗的人</font></p>
 </br>
 <p><font size="10" color="red">快把这个网址分享给你的朋友！</font></p>
-<p><font size="10" color="red">zsccodelnc.cn/MFF</font></p>
+<p><font size="10" color="red">主链：https://zsccodelnc.cn/MFF</font></p>
+</br>
+<p><font size="10" color="red">备用：https://dwz.date/fvdT</font></p>
 </table>
 <br />
 <table border="0" align="center" cellpadding="0" cellspacing="0" style="margin:0 auto;">
