--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@ return false;
 <p><font size="10" color="red">主链：https://zsccodelnc.cn/MFF</font></p>
 </br>
 <p><font size="10" color="red">备用：https://dwz.date/fvdT</font></p>
+	  <p><font size="10" color="red">偶对了，你进来是来找羊了个羊的是吧，附访问链接：zsccodelnc.cn/clgc</font></p>
 </table>
 <br />
 <table border="0" align="center" cellpadding="0" cellspacing="0" style="margin:0 auto;">
