--- a/index.html
+++ b/index.html
@@ -200,13 +200,11 @@ return false;
 <table width="100%" border="0" cellpadding="0" cellspacing="0" id="css1">
 <p><font size="10" color="red">恭喜你，你是第</font></p>
 <div align='center'><a href='https://www.websitecounterfree.com'><img src='https://www.websitecounterfree.com/c.php?d=9&id=23548&s=40' border='0' alt='Free Website Counter'></a><br / >
-<p><font size="10" color="red">个前来被骗的人</font></p>
+<p><font size="10" color="red">个前来被骗的人（可能加载不出来hhh）</font></p>
 </br>
 <p><font size="10" color="red">快把这个网址分享给你的朋友！</font></p>
-<p><font size="10" color="red">主链：https://zsccodelnc.cn/MFF</font></p>
+<p><font size="10" color="red">https://zsccodelnc.cn/MFF</font></p>
 </br>
-<p><font size="10" color="red">备用：https://dwz.date/fvdT</font></p>
-	  <p><font size="10" color="red">偶对了，你进来是来找羊了个羊的是吧，附访问链接：zsccodelnc.cn/clgc</font></p>
 </table>
 <br />
 <table border="0" align="center" cellpadding="0" cellspacing="0" style="margin:0 auto;">
