--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ return false;
     <td height="10"><hr style="width:950px;" /></td>
 
     站长：louvreliu     修改者站长：Orange（Shicheng Zhang） 　<a href="mail:orangezhsc@gmail.com">orangezhsc@gmail.com</a>&nbsp;　<br />     
-    CopyRight 2022—202我不到啊 <a href="https://zsccodelnc.cn">Orange的博客</a></td>
+    CopyRight 2022—202我不到啊 <a href="/">Orange的博客</a></td>
   </tr>
 </table>
 <span style="display:none;"><script type="text/javascript" src="/public/scripts/tongji.js"></script></span>
